--- a/index.html
+++ b/index.html
@@ -3,44 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventori ATK KC Selong</title>
+    <title>Dashboard Inventori ATK KC Selong</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <style>
-        body { background-color: #f4f7f9; }
-        .container { max-width: 1000px; }
-        .header-section { background: #0d6efd; color: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; }
-        .table-container { background: white; border-radius: 10px; padding: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        .btn-import { background-color: #198754; color: white; font-weight: bold; }
+        body { background-color: #f0f2f5; font-family: 'Inter', sans-serif; }
+        .sidebar-title { color: #0d6efd; font-weight: 800; letter-spacing: 1px; }
+        .stat-card { border: none; border-left: 5px solid #0d6efd; border-radius: 10px; transition: transform 0.2s; }
+        .stat-card:hover { transform: translateY(-5px); }
+        .table-container { background: white; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); }
+        .btn-primary-custom { background: #0d6efd; border: none; padding: 10px 20px; }
     </style>
 </head>
 <body>
 
-<div class="container py-5">
-    <div class="header-section text-center">
-        <h1>📦 Inventori ATK KC Selong</h1>
-        <p class="mb-0">Sistem Manajemen Stok Otomatis</p>
+<div class="container py-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <div>
+            <h2 class="sidebar-title mb-0">ADMIN DASHBOARD</h2>
+            <p class="text-muted">Manajemen Inventori ATK KC Selong</p>
+        </div>
+        <div class="text-end">
+            <span id="currentDate" class="badge bg-dark p-2"></span>
+        </div>
     </div>
 
-    <div class="table-container">
-        <div class="row mb-4 bg-light p-3 rounded mx-0 border">
-            <div class="col-md-8">
-                <label class="form-label fw-bold">Pilih File CSV (Data ATK KC Selong.csv):</label>
-                <input type="file" id="csvFileInput" class="form-control" accept=".csv">
-            </div>
-            <div class="col-md-4 d-grid align-items-end">
-                <button onclick="importData()" class="btn btn-import mt-2">⚡ Proses & Tampilkan Data</button>
+    <div class="row mb-4">
+        <div class="col-md-4">
+            <div class="card stat-card p-3 shadow-sm mb-3">
+                <div class="text-muted small fw-bold">TOTAL JENIS ATK</div>
+                <div class="h3 fw-bold" id="totalItems">0</div>
+                <div class="text-primary small"><i class="bi bi-box-seam"></i> Barang Terdaftar</div>
             </div>
         </div>
+        <div class="col-md-4">
+            <div class="card stat-card p-3 shadow-sm mb-3" style="border-left-color: #198754;">
+                <div class="text-muted small fw-bold">TOTAL STOK TERSEDIA</div>
+                <div class="h3 fw-bold" id="totalStock">0</div>
+                <div class="text-success small"><i class="bi bi-graph-up-arrow"></i> Unit Gabungan</div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card stat-card p-3 shadow-sm mb-3" style="border-left-color: #ffc107;">
+                <div class="text-muted small fw-bold">IMPORT DATA TERAKHIR</div>
+                <div class="h3 fw-bold" style="font-size: 1.2rem;" id="lastUpdate">-</div>
+                <div class="text-warning small"><i class="bi bi-clock-history"></i> Status Sinkronisasi</div>
+            </div>
+        </div>
+    </div>
 
+    <div class="table-container p-4 mb-4">
+        <h5 class="fw-bold mb-3"><i class="bi bi-file-earmark-arrow-up"></i> Update Database dari CSV</h5>
+        <div class="row g-2">
+            <div class="col-md-9">
+                <input type="file" id="csvFileInput" class="form-control" accept=".csv">
+            </div>
+            <div class="col-md-3 d-grid">
+                <button onclick="importData()" class="btn btn-primary-custom text-white fw-bold">PROSES DATA</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="table-container p-4">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h5 class="fw-bold mb-0">Daftar Inventori Real-time</h5>
+            <input type="text" id="searchBox" class="form-control w-25" placeholder="Cari barang..." onkeyup="searchBarang()">
+        </div>
         <div class="table-responsive">
-            <table class="table table-hover align-middle">
-                <thead class="table-dark">
+            <table class="table table-hover border-top">
+                <thead class="table-light">
                     <tr>
-                        <th style="width: 10%;">Kode</th>
-                        <th style="width: 50%;">Nama Barang</th>
-                        <th style="width: 15%;">Stok</th>
-                        <th style="width: 15%;">Satuan</th>
-                        <th style="width: 10%;" class="text-center">Aksi</th>
+                        <th>KODE</th>
+                        <th>NAMA BARANG</th>
+                        <th>JUMLAH</th>
+                        <th>SATUAN</th>
+                        <th class="text-end">AKSI</th>
                     </tr>
                 </thead>
                 <tbody id="inventoryTable">
@@ -51,74 +88,76 @@
 </div>
 
 <script>
-    // Mengambil data dari localStorage atau array kosong
     let atkList = JSON.parse(localStorage.getItem('atkDataSelong')) || [];
 
-    function displayTable() {
+    function updateStats() {
+        document.getElementById('totalItems').innerText = atkList.length;
+        const total = atkList.reduce((acc, curr) => acc + (parseInt(curr.stok) || 0), 0);
+        document.getElementById('totalStock').innerText = total;
+        document.getElementById('currentDate').innerText = new Date().toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+    }
+
+    function displayTable(data = atkList) {
         const tableBody = document.getElementById('inventoryTable');
         tableBody.innerHTML = '';
 
-        atkList.forEach((item, index) => {
+        data.forEach((item, index) => {
             tableBody.innerHTML += `
                 <tr>
-                    <td class="text-muted small">${item.kode}</td>
-                    <td class="fw-bold text-uppercase">${item.nama}</td>
-                    <td><span class="badge bg-primary fs-6">${item.stok}</span></td>
-                    <td class="text-secondary font-monospace">${item.satuan}</td>
-                    <td class="text-center">
-                        <button onclick="removeItem(${index})" class="btn btn-sm btn-outline-danger">Hapus</button>
+                    <td class="text-muted small">#${item.kode}</td>
+                    <td class="fw-bold text-dark">${item.nama}</td>
+                    <td><span class="badge ${item.stok < 10 ? 'bg-danger' : 'bg-primary'}">${item.stok}</span></td>
+                    <td class="text-secondary">${item.satuan}</td>
+                    <td class="text-end">
+                        <button onclick="removeItem(${index})" class="btn btn-sm btn-light border"><i class="bi bi-trash text-danger"></i></button>
                     </td>
                 </tr>
             `;
         });
-        // Simpan ke localStorage agar data tidak hilang saat refresh
         localStorage.setItem('atkDataSelong', JSON.stringify(atkList));
+        updateStats();
     }
 
     function importData() {
         const fileInput = document.getElementById('csvFileInput');
         const file = fileInput.files[0];
-
-        if (!file) {
-            alert("Silakan pilih file CSV terlebih dahulu!");
-            return;
-        }
+        if (!file) return alert("Pilih file CSV!");
 
         const reader = new FileReader();
         reader.onload = function(e) {
             const rows = e.target.result.split('\n');
-            
-            // Reset list sebelum import baru (opsional)
-            // atkList = []; 
-
-            // Loop mulai dari baris 1 (karena baris 0 adalah header: No, Nama ATK, Jumlah, Satuan)
+            atkList = []; 
             for (let i = 1; i < rows.length; i++) {
                 const cols = rows[i].split(',');
-                
-                // Pastikan kolom lengkap
                 if (cols.length >= 4) {
                     atkList.push({
-                        kode: cols[0].trim(),   // Kolom No
-                        nama: cols[1].trim(),   // Kolom Nama ATK
-                        stok: cols[2].trim(),   // Kolom Jumlah
-                        satuan: cols[3].trim()  // Kolom Satuan
+                        kode: cols[0].trim(),
+                        nama: cols[1].trim(),
+                        stok: cols[2].trim(),
+                        satuan: cols[3].trim()
                     });
                 }
             }
+            document.getElementById('lastUpdate').innerText = new Date().toLocaleTimeString('id-ID');
             displayTable();
-            alert("Data Berhasil Dimasukkan!");
+            alert("Dashboard Berhasil Diperbarui!");
         };
         reader.readAsText(file);
     }
 
+    function searchBarang() {
+        const key = document.getElementById('searchBox').value.toLowerCase();
+        const filtered = atkList.filter(i => i.nama.toLowerCase().includes(key));
+        displayTable(filtered);
+    }
+
     function removeItem(index) {
-        if(confirm("Hapus data ini?")) {
+        if(confirm("Hapus item ini?")) {
             atkList.splice(index, 1);
             displayTable();
         }
     }
 
-    // Jalankan tabel saat halaman dibuka
     displayTable();
 </script>
 
