--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <style>
         body { background-color: #f0f2f5; font-family: 'Inter', sans-serif; }
         .sidebar-title { color: #0d6efd; font-weight: 800; letter-spacing: 1px; }
-        .stat-card { border: none; border-left: 5px solid #0d6efd; border-radius: 10px; transition: transform 0.2s; }
-        .stat-card:hover { transform: translateY(-5px); }
+        .stat-card { border: none; border-left: 5px solid #0d6efd; border-radius: 10px; }
         .table-container { background: white; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); }
-        .btn-primary-custom { background: #0d6efd; border: none; padding: 10px 20px; }
     </style>
 </head>
 <body>
@@ -23,65 +21,64 @@
             <h2 class="sidebar-title mb-0">ADMIN DASHBOARD</h2>
             <p class="text-muted">Manajemen Inventori ATK KC Selong</p>
         </div>
-        <div class="text-end">
-            <span id="currentDate" class="badge bg-dark p-2"></span>
-        </div>
+        <button onclick="clearAllData()" class="btn btn-outline-danger btn-sm">
+            <i class="bi bi-trash3"></i> Hapus Semua Data
+        </button>
     </div>
 
     <div class="row mb-4">
         <div class="col-md-4">
             <div class="card stat-card p-3 shadow-sm mb-3">
-                <div class="text-muted small fw-bold">TOTAL JENIS ATK</div>
+                <div class="text-muted small fw-bold text-uppercase">Total Item Terdaftar</div>
                 <div class="h3 fw-bold" id="totalItems">0</div>
-                <div class="text-primary small"><i class="bi bi-box-seam"></i> Barang Terdaftar</div>
+                <div class="text-primary small"><i class="bi bi-box-seam"></i> Berdasarkan CSV</div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card stat-card p-3 shadow-sm mb-3" style="border-left-color: #198754;">
-                <div class="text-muted small fw-bold">TOTAL STOK TERSEDIA</div>
+                <div class="text-muted small fw-bold text-uppercase">Total Stok Keseluruhan</div>
                 <div class="h3 fw-bold" id="totalStock">0</div>
-                <div class="text-success small"><i class="bi bi-graph-up-arrow"></i> Unit Gabungan</div>
+                <div class="text-success small"><i class="bi bi-graph-up-arrow"></i> Akumulasi Unit</div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card stat-card p-3 shadow-sm mb-3" style="border-left-color: #ffc107;">
-                <div class="text-muted small fw-bold">UPDATE TERAKHIR</div>
+                <div class="text-muted small fw-bold text-uppercase">Update Terakhir</div>
                 <div class="h3 fw-bold" style="font-size: 1.2rem;" id="lastUpdate">-</div>
-                <div class="text-warning small"><i class="bi bi-clock-history"></i> Status Sinkronisasi</div>
+                <div class="text-warning small"><i class="bi bi-clock-history"></i> Jam Sinkronisasi</div>
             </div>
         </div>
     </div>
 
-    <div class="table-container p-4 mb-4">
-        <h5 class="fw-bold mb-3"><i class="bi bi-file-earmark-arrow-up"></i> Update Database dari CSV</h5>
+    <div class="table-container p-4 mb-4 border">
+        <h5 class="fw-bold mb-3"><i class="bi bi-file-earmark-arrow-up"></i> Upload Data ATK Baru</h5>
         <div class="row g-2">
-            <div class="col-md-9 text-start">
+            <div class="col-md-9">
                 <input type="file" id="csvFileInput" class="form-control" accept=".csv">
             </div>
             <div class="col-md-3 d-grid">
-                <button onclick="importData()" class="btn btn-primary-custom text-white fw-bold">PROSES DATA</button>
+                <button onclick="importData()" class="btn btn-primary fw-bold">PROSES & UPDATE</button>
             </div>
         </div>
     </div>
 
     <div class="table-container p-4">
         <div class="d-flex justify-content-between align-items-center mb-3">
-            <h5 class="fw-bold mb-0">Daftar Inventori Real-time</h5>
-            <input type="text" id="searchBox" class="form-control w-25" placeholder="Cari barang..." onkeyup="searchBarang()">
+            <h5 class="fw-bold mb-0">Daftar Stok Real-time</h5>
+            <input type="text" id="searchBox" class="form-control w-25" placeholder="Cari nama barang..." onkeyup="searchBarang()">
         </div>
-        <div class="table-responsive text-start">
-            <table class="table table-hover border-top">
+        <div class="table-responsive">
+            <table class="table table-hover">
                 <thead class="table-light">
                     <tr>
-                        <th style="width: 5%;">NO</th>
-                        <th style="width: 50%;">NAMA BARANG</th>
-                        <th style="width: 15%;">JUMLAH</th>
-                        <th style="width: 15%;">SATUAN</th>
+                        <th>NO</th>
+                        <th>NAMA ATK</th>
+                        <th>STOK</th>
+                        <th>SATUAN</th>
                         <th class="text-end">AKSI</th>
                     </tr>
                 </thead>
-                <tbody id="inventoryTable">
-                </tbody>
+                <tbody id="inventoryTable"></tbody>
             </table>
         </div>
     </div>
@@ -94,25 +91,22 @@
         document.getElementById('totalItems').innerText = atkList.length;
         const total = atkList.reduce((acc, curr) => acc + (parseInt(curr.stok) || 0), 0);
         document.getElementById('totalStock').innerText = total;
-        document.getElementById('currentDate').innerText = new Date().toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
     }
 
     function displayTable(data = atkList) {
         const tableBody = document.getElementById('inventoryTable');
         tableBody.innerHTML = '';
-
         data.forEach((item, index) => {
             tableBody.innerHTML += `
                 <tr>
                     <td>${item.no}</td>
-                    <td class="fw-bold text-dark">${item.nama}</td>
+                    <td class="fw-bold">${item.nama}</td>
                     <td><span class="badge ${item.stok < 10 ? 'bg-danger' : 'bg-primary'}">${item.stok}</span></td>
-                    <td class="text-secondary">${item.satuan}</td>
+                    <td class="text-secondary small">${item.satuan}</td>
                     <td class="text-end">
-                        <button onclick="removeItem(${index})" class="btn btn-sm btn-light border"><i class="bi bi-trash text-danger"></i></button>
+                        <button onclick="removeItem(${index})" class="btn btn-sm btn-light border text-danger"><i class="bi bi-trash"></i></button>
                     </td>
-                </tr>
-            `;
+                </tr>`;
         });
         localStorage.setItem('atkDataSelong', JSON.stringify(atkList));
         updateStats();
@@ -126,28 +120,31 @@
         const reader = new FileReader();
         reader.onload = function(e) {
             const rows = e.target.result.split('\n');
-            
-            // PENTING: Reset list menjadi kosong sebelum isi data baru
-            // agar tidak menumpuk (menjadi 999+)
-            atkList = []; 
-
+            atkList = []; // Reset data lama
             for (let i = 1; i < rows.length; i++) {
                 const cols = rows[i].split(',');
-                // Hanya masukkan jika baris memiliki nama barang (kolom ke-2)
-                if (cols.length >= 2 && cols[1].trim() !== "") {
+                if (cols.length >= 3 && cols[1].trim() !== "") {
                     atkList.push({
                         no: cols[0].trim(),
                         nama: cols[1].trim(),
-                        stok: cols[2] ? cols[2].trim() : "0",
-                        satuan: cols[3] ? cols[3].trim() : "-"
+                        stok: cols[2].trim(),
+                        satuan: cols[3] ? cols[3].trim() : '-'
                     });
                 }
             }
             document.getElementById('lastUpdate').innerText = new Date().toLocaleTimeString('id-ID');
             displayTable();
-            alert("Berhasil! Terdeteksi " + atkList.length + " jenis barang.");
+            alert("Berhasil mengimpor " + atkList.length + " barang.");
         };
         reader.readAsText(file);
+    }
+
+    function clearAllData() {
+        if(confirm("Apakah Anda yakin ingin menghapus SEMUA data di dashboard?")) {
+            atkList = [];
+            displayTable();
+            document.getElementById('lastUpdate').innerText = "-";
+        }
     }
 
     function searchBarang() {
@@ -157,14 +154,11 @@
     }
 
     function removeItem(index) {
-        if(confirm("Hapus item ini?")) {
-            atkList.splice(index, 1);
-            displayTable();
-        }
+        atkList.splice(index, 1);
+        displayTable();
     }
 
     displayTable();
 </script>
-
 </body>
 </html>
